--- a/HTML/css/styles.css
+++ b/HTML/css/styles.css
@@ -9,14 +9,14 @@ body, html {
 
 .image-container {
     background-color:black;
-    background-image: url("../images/background_image.jpg");
+    background-image: url("../images/snowboarderShreddingPow.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     height: 100%;
     background-position: center center;
-    padding-top: 100%;
-    padding-left: 100%;
-    background-size:contain;
+    /*padding-top: 100%;
+    padding-left: 100%;*/
+    background-size: cover;
     background-blend-mode:difference;
     background-origin:border-box;
     position:relative;
