--- a/HTML/css/styles.css
+++ b/HTML/css/styles.css
@@ -1,9 +1,9 @@
 body, html {
     margin: 0;
-    font-family: system_ui;
+    font-family: sans-serif;
     height: 100%;
     box-sizing: border-box;
-    overflow: hidden
+    overflow: auto;
 
 }
 
@@ -13,12 +13,9 @@ body, html {
     background-repeat: no-repeat;
     background-attachment: fixed;
     height: 100%;
-    background-position: center center;
-    /*padding-top: 100%;
-    padding-left: 100%;*/
+    width: 100%;
+    background-position: center;
     background-size: cover;
-    background-blend-mode:difference;
-    background-origin:border-box;
     position:relative;
     z-index: 0;
     display: block;
@@ -38,8 +35,7 @@ body, html {
     display: block;
     cursor: pointer;
     border-radius: 12px;
-    background-color: rgb(44, 49, 52);
-    /*object-position:0%;*/
+    background-color: rgb(6, 13, 38);
     transition: ease-out .3s;
     outline: none;
     z-index: 1;
@@ -47,7 +43,7 @@ body, html {
 }
 
 .button:hover {
-    box-shadow: inset 250px 0 0 0 rgb(6, 13, 38);
+    box-shadow: inset 250px 0 0 0 black;
     cursor: pointer;
     color: darkcyan;
 }
@@ -57,35 +53,40 @@ body, html {
 .float-container {
     position: relative;
     border: 1px black;
-    display: block;
+    display: none; 
+    flex-direction:column; 
+    justify-content: center; 
+    align-items: center; 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: fit-content;
     position: absolute;
-    display: none;
 }
 
 .float-child {
     border: 1px cadetblue; 
     color:darkcyan;
     padding: 13px 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
     width: fit-content;
-    float: left;
-} 
+}
+
 
 .box {
     display: block;
     text-align: center;
     z-index: 4;
     color:darkcyan; 
-    padding: 13px 15px;
-    background-color: rgb(44, 49, 52);
+    padding: 10px 15px;
+    background-color: rgb(6, 13, 38);
     border-radius: 12px;
     border: 1px solid black;
-    float: left;
-
-
+    justify-content: center; 
+    align-items: center; 
+    white-space: pre-wrap;
 }
 
 
