--- a/HTML/css/styles.css
+++ b/HTML/css/styles.css
@@ -23,18 +23,17 @@ body, html {
     
 }
 
-.button {
+.window {
     position:fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border:cadetblue;
     color:darkcyan;
-    padding: 13px 15px;
+    padding: 10px 15px;
     text-align: center;
     font-size: 25px;
     display: block;
-    cursor: pointer;
     border-radius: 12px;
     background-color: rgb(6, 13, 38);
     transition: ease-out .3s;
@@ -94,7 +93,7 @@ body, html {
 .infoButton {
     position: fixed;
     border: 1px solid black;
-    display: flex; 
+    display: none; 
     justify-content: center; 
     align-items: center; 
     top: 95%;
